<resources>
    <string name="app_name">ChanceChain</string>
    <string name="title_activity_authenticator">Chance</string>
    <string name="title_home">Home</string>
    <string name="title_guan">My Follow</string>
    <string name="title_his_follow">His Follow</string>
    <string name="title_dashboard">My Page</string>
    <string name="title_notifications">Post Chance</string>
    <string name="title_activity_home">ChanceHome</string>
    <string name="title_activity_notification">Post Chance</string>
    <string name="title_activity_my">My Page</string>
    <string name="title_activity_information">About Me</string>
    <string name="title_activity_change_information">About Me</string>
    <string name="action_settings">Settings</string>
    <string name="app_main_screen">Sign in</string>
    <string name="app_main_screen_title">Cognito Identity</string>
    <string name="app_main_desc">A sample app to showcase Cognito Identity and the SDK for Android.</string>
    <string name="nav_drawer_open">Open navigation drawer</string>
    <string name="nav_drawer_close">Close navigation drawer</string>
    <string name="title_activity_user">UserActivity</string>
    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="Menu">Menu</string>
    <string name="uploadTou">Upload Photo</string>
    <string name="takePic">Take Picture</string>
    <string name="nickname">Nick Name</string>
    <string name="name">Name</string>
    <string name="chanceId">Chance ID</string>
    <string name="walletAddress">Wallet Address</string>
    <string name="gender">gender</string>
    <string name="career">career</string>
    <string name="resuem">Resume</string>
    <string name="finish">Complete</string>
    <string name="confirmAccount">Confirm Your Account</string>
    <string name="enterAccount">Please enter your username and the verification code to finish registration</string>
    <string name="userName">UserName</string>
    <string name="verCode">Verification Code</string>
    <string name="finishRegister">Complete Registration</string>
    <string name="send">Send</string>
    <string name="Get">Get</string>
    <string name="xianzhi">Chance taken</string>
    <string name="comment">Enter some comments...</string>
    <string name="amount">Enter amount</string>
    <string name="top">TOP UP</string>
    <string name="ex">Exchange</string>
    <string name="not">Not Taken</string>
    <string name="proc">In Process</string>
    <string name="comp">Completed</string>
    <string name="forgot">Forgot Password?</string>
    <string name="forver">Use the verifiction code that was sent to you and your Username or Email address to change your password.</string>
    <string name="unameor">Your Username or Email</string>
    <string name="newp">New Password</string>
    <string name="cpass">Change Password</string>
    <string name="sver">Send Verification Code</string>
    <string name="fol">Follow</string>
    <string name="beiguan">Follower</string>
    <string name="fabu">Post</string>
    <string name="quguan">Unfollow</string>
    <string name="faxiao">Send Message</string>
    <string name="more">More</string>
    <string name="change">Change infomation</string>
    <string name="login">Log in</string>
    <string name="register">Register</string>
    <string name="message">Message</string>
    <string name="csec">Chance Secretary</string>
    <string name="cbro">Chance Broadcast</string>
    <string name="woji">My Chance</string>
    <string name="wofa">My Post</string>
    <string name="woren">My Mission</string>
    <string name="woqian">My Wallet</string>
    <string name="wogen">My Follow</string>
    <string name="woxiao">My Message</string>
    <string name="setting">Settings</string>
    <string name="candy">candy</string>
    <string name="tasset">Total Asset: %s</string>
    <string name="afunds">Available Funds: %s</string>
    <string name="cc">ChanceChain Coin</string>
    <string name="ether">Ethernum</string>
    <string name="title">Title</string>
    <string name="neirong">Content</string>
    <string name="biao">Tag</string>
    <string name="huodong">Activity</string>
    <string name="yue">Dates</string>
    <string name="renwu">Missions</string>
    <string name="qita">Other</string>
    <string name="jine">Amount</string>
    <string name="renshu">Quantity</string>
    <string name="myinf">My Information</string>
    <string name="yuyan">Language</string>
    <string name="qingchu">Empty Cache</string>
    <string name="ipad">IP Address</string>
    <string name="confip">Confirm IP Address</string>
    <string name="logout">Log OUt</string>
    <string name="tanzhuan">Talk about this sharing</string>
    <string name="regitxt">Enter following message to complete registration</string>
    <string name="passagain">Please enter password again</string>
    <string name="cproc">Chance in Process</string>
    <string name="ccomp">Completed Chances</string>
    <string name="conf">Confirm</string>
    <string name="quxi">cancel</string>
    <string name="yiguan">Followed</string>
    <string name="seep">See Profile</string>
    <string name="zhuhe">Congratulations！\nYou have gotten this Chance</string>
    <string name="quji">Go to my chance</string>
    <string name="ok">OK</string>
    <string name="share">Share</string>
    <string name="sharec">Share Chance</string>
    <string name="home">Home</string>
    <string name="wofabu">My Post</string>
    <string name="woye">My Page</string>
    <string name="entitle">Please enter title</string>
    <string name="encontent">Please enter content</string>
    <string name="entag">Please enter tag</string>
    <string name="enquan">Please enter quantity</string>
    <string name="upl">Uploaded</string>
    <string name="fnote">Available funds not enough</string>
    <string name="fupload">First upload, you have gotten 100 Candy</string>
    <string name="ftoup">First upload today, you have gotten 10 Candy</string>
    <string name="flogin">First Login，you have gotten 100 Candy</string>
    <string name="onelog">Consecutive Login in one day，you have gotten 5 Candy</string>
    <string name="twolog">Consecutive Login in two day，you have gotten 10 Candy</string>
    <string name="threelog">Consecutive Login in three day，you have gotten 15 Candy</string>
    <string name="fourlog">Consecutive Login in four day，you have gotten 30 Candy</string>
    <string name="fivelog">Consecutive Login in five day，you have gotten 40 Candy</string>
    <string name="sixlog">Consecutive Login in six day，you have gotten 50 Candy</string>
    <string name="sevenlog">Consecutive Login in seven day，you have gotten 1 reputation</string>
    <string name="pay" >Pay: %s %s</string>
    <string name="ask">Ask: %s %s</string>
    <string name="cleft"> Chances left: %s</string>
    <string name="nochance">No chance left</string>
    <string name="ataken">Chance already taken</string>
    <string name="fpic">This is the first picture</string>
    <string name="lpic">This is the last picture</string>
    <string name="ftrade">First trade，you have gotten 100 Candy</string>
    <string name="chanceguang">All chances have been taken</string>
    <string name="afundnot">Available funds not enough</string>
    <string name="fget">First get, you have gotten 100 Candy</string>
    <string name="enterall">Please enter all the information</string>
    <string name="passnotmatch">Password doesnot match please enter again</string>
    <string name="passnotlong">Password be longer than eight characters</string>
    <string name="empyou">Please fill Email and username</string>
    <string name="empyan">Please fill password and verification code</string>
    <string name="loginfail">Log in fail, please try again</string>
    <string name="yourip">Your IP address is %s</string>
    <string name="compchange">You have successfully change your password </string>
    <string name="changefail">Change password failed </string>
    <string name="succonf">Confirmed successfully </string>
    <string name="fshare">First share, you have gotten 100 Candy</string>
    <string name="fshareto">First share today, you have gotten 10 Candy</string>
    <string name="somewrong">Something is wrong, please fill again </string>
    <string name="transferccsuc">Transfer cc successful, the hash is: %s</string>
    <string name="transferccfail">Transfer cc fail </string>
    <string name="transferethsuc">Transfer eth successful, the hash is: %s</string>
    <string name="transferethfail">Transfer eth fail </string>
    <string name="cantfind">Could not find the filepath of the selected file</string>
    <string name="permg">Permission Granted </string>
    <string name="permd">Permission Denied </string>
    <string name="rep">Reputation: %s</string>
    <string name="hispage">Profile</string>
    <string name="titlelimit">Title is too long</string>
    <string name="contentLimit">Content is too long</string>
    <string name="userToolong">Your Username is too long</string>
    <string name="usernameexit">Your Username already exist</string>
    <string name="emailused">This email is already registered</string>
    <string name="st">Sent</string>

    <string name="facebook_app_id">1007699982736676</string>
    <string name="fb_login_protocol_scheme">fb1007699982736676</string>



    <string-array name="currency_name">
        <item>Candy</item>
        <item>cc</item>
        <item>eth</item>
    </string-array>

    <string-array name="type">
        <item>Pay</item>
        <item>Ask</item>
    </string-array>


    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
</resources>
