<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".InformationActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/changeBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/resumeInp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:text="@string/change" />


        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/touxiang"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:src="@drawable/sp" />
        <TextView
            android:id="@+id/uid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignStart="@+id/touxiang"
            android:layout_below="@+id/touxiang"
            android:layout_marginTop="89dp"
            android:text="@string/nickname" />

        <TextView
            android:id="@+id/nameText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/touxiang"
            android:layout_marginTop="119dp"
            android:text="@string/name" />

        <TextView
            android:id="@+id/chanceId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignStart="@+id/touxiang"
            android:layout_marginTop="149dp"
            android:text="@string/chanceId" />
        <TextView
            android:id="@+id/walletAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignStart="@+id/touxiang"
            android:layout_marginTop="179dp"
            android:text="@string/walletAddress" />

        <TextView
            android:id="@+id/sexText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/touxiang"
            android:layout_marginTop="209dp"
            android:text="@string/gender" />

        <TextView
            android:id="@+id/careerTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/touxiang"
            android:layout_marginTop="239dp"
            android:text="@string/career" />

        <TextView
            android:id="@+id/resumeTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/touxiang"
            android:layout_marginTop="269dp"
            android:text="@string/resuem" />

        <TextView
            android:id="@+id/resumeInp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/touxiang"
            android:layout_marginTop="299dp"
            />

        <TextView
            android:id="@+id/usridInp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/uid"
            android:layout_toEndOf="@+id/touxiang" />

        <TextView
            android:id="@+id/chanceInp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/chanceId"
            android:layout_alignTop="@+id/chanceId"
             />

        <TextView
            android:id="@+id/addressInp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/walletAddress"
            android:layout_toRightOf="@+id/walletAddress" />

        <TextView
            android:id="@+id/nameInp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/nameText"
            android:layout_toEndOf="@+id/nameText" />

        <TextView
            android:id="@+id/sexInp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/sexText"
            android:layout_alignTop="@+id/sexText"
             />

        <TextView
            android:id="@+id/careerInp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/careerTxt"
            android:layout_alignTop="@+id/careerTxt"
             />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignStart="@+id/usridInp"
            android:layout_marginTop="27dp"
            android:text="TextView" />


    </RelativeLayout>

</ScrollView>