<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/beijing"
    tools:context=".confirmUser">


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/textView2"
        android:textColor="@color/yellow"
        android:textSize="25sp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_marginTop="31dp"
        android:text="@string/confirmAccount" />
    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="79dp"
        android:textSize="15sp"
        android:textColor="@color/yellow"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/enterAccount" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:backgroundTint="@color/yellow"
        android:ems="10"
        android:hint="@string/verCode"
        android:inputType="textPassword"
        android:textColor="@color/yellow"
        android:textColorHint="@color/yellow"
        android:textSize="20sp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="114dp"
        android:background="@drawable/button_selector"
        android:textColor="@color/black"
        android:text="@string/finishRegister" />

    <ProgressBar
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignTop="@+id/button2"
        android:layout_centerHorizontal="true" />
</RelativeLayout>