<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".settingActivity">
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/rel1"
        android:clickable="true"
        android:layout_alignParentTop="true">
        <TextView
        android:id="@+id/gerenxinxi"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:gravity="center_vertical"
        android:textSize="25sp"
        android:text="@string/myinf" />

        <ImageView
            android:id="@+id/more1"
            android:layout_width="31dp"
            android:layout_height="31dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:layout_marginEnd="17dp"
            app:srcCompat="@drawable/more" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_below="@+id/gerenxinxi"
            android:id="@+id/shezhiSpace1"
            android:background="@color/homeback"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/rel2"
        android:clickable="true"
        android:layout_below="@+id/rel1">
        <TextView
            android:id="@+id/pianhaoshezhi"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:gravity="center_vertical"
            android:textSize="25sp"
            android:layout_alignParentStart="true"
            android:text="@string/yuyan" />

        <ImageView
            android:id="@+id/more2"
            android:layout_width="31dp"
            android:layout_height="31dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:layout_marginEnd="17dp"
            app:srcCompat="@drawable/more" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_below="@+id/pianhaoshezhi"
            android:id="@+id/shezhiSpace2"
            android:background="@color/homeback"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/rel3"
        android:clickable="true"
        android:layout_below="@+id/rel2">
        <ImageView
            android:id="@+id/more3"
            android:layout_width="31dp"
            android:layout_height="31dp"
            android:layout_marginEnd="17dp"
            android:layout_alignParentEnd="true"
            android:layout_alignBottom="@+id/qingchuhuancun"
            app:srcCompat="@drawable/more" />
        <TextView
            android:id="@+id/qingchuhuancun"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:gravity="center_vertical"
            android:textSize="25sp"
            android:layout_alignParentStart="true"
            android:text="@string/qingchu" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_below="@+id/qingchuhuancun"
            android:id="@+id/shezhiSpace3"
            android:background="@color/homeback"/>
    </RelativeLayout>


    <Button
        android:id="@+id/logoutBtn"
        android:layout_width="296dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="41dp"
        android:background="@color/warning"
        android:text="@string/logout"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="287dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="181dp"
        android:background="@color/homeback"
        android:textSize="20sp"
        android:ems="10"
        android:textColor="@color/white"
        android:inputType="textPersonName"
        android:textColorHint="@color/white"
        android:hint="@string/ipad" />

    <Button
        android:id="@+id/button7"
        android:layout_width="167dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="111dp"
        android:background="@color/yellow"
        android:text="@string/confip"
        android:textColor="@color/black" />
</RelativeLayout>