<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="250dp"
    android:layout_height="wrap_content"
    android:background="@color/white">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="41dp"
        android:id="@+id/takeLay"
        android:layout_alignParentTop="true"
        android:clickable="true"
        android:onClick="takePic">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:textColor="@color/black"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="10dp"
            android:text="@string/takePic"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            android:background="@color/homeback"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="43dp"
        android:layout_below="@+id/takeLay"
        android:id="@+id/upLay"
        android:clickable="true"
        android:onClick="uploadpic">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:textColor="@color/black"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="10dp"
            android:text="@string/uploadTou"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            android:background="@color/homeback"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="43dp"
        android:id="@+id/canLay"
        android:layout_below="@id/upLay"
        android:clickable="true"
        android:onClick="dismiss">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:textColor="@color/alert"
            android:layout_marginStart="10dp"
            android:text="@string/quxi"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            android:background="@color/homeback"/>

    </RelativeLayout>
</RelativeLayout>