<?xml version="1.0" encoding="utf-8"?>


<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:background="@drawable/beijing"
    tools:context=".signUpActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/regitxt"
        android:textColor="@color/yellow"
        android:id="@+id/textViewRegMessage"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="32dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textSize="@dimen/activity_text_size_small"
        android:text=" "
        android:id="@+id/textViewRegUserIdLabel"
        android:layout_below="@+id/textViewRegMessage"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_text_padding"
        android:paddingRight="@dimen/activity_text_padding"
        android:id="@+id/editTextRegUserId"
        android:backgroundTint="@color/yellow"
        android:textColor="@color/yellow"
        android:layout_below="@+id/textViewRegUserIdLabel"
        android:layout_centerHorizontal="true"
        android:hint="@string/userName"
        android:text=""
        android:textColorHint="@color/yellow"
        android:inputType="textPersonName"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textSize="@dimen/activity_text_padding"
        android:text=" "
        android:color="@color/alert"
        android:textColor="@color/alert"
        android:id="@+id/textViewRegUserIdMessage"
        android:layout_below="@+id/editTextRegUserId"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textSize="@dimen/activity_text_size_small"
        android:text=" "
        android:id="@+id/textViewRegUserPasswordLabel"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/textViewRegUserIdMessage" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_text_padding"
        android:paddingRight="@dimen/activity_text_padding"
        android:id="@+id/editTextRegUserPassword"
        android:layout_below="@+id/textViewRegUserPasswordLabel"
        android:layout_centerHorizontal="true"
        android:hint="@string/Password"
        android:textColorHint="@color/yellow"
        android:inputType="textPassword"
        android:backgroundTint="@color/yellow"
        android:textColor="@color/yellow"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textSize="@dimen/activity_text_padding"
        android:text=" "
        android:textColor="@color/alert"
        android:id="@+id/textViewUserRegPasswordMessage"
        android:layout_below="@+id/editTextRegUserPassword"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textSize="@dimen/activity_text_size_small"
        android:text=" "
        android:id="@+id/textViewRegGivenNameLabel"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/textViewUserRegPasswordMessage" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_text_padding"
        android:paddingRight="@dimen/activity_text_padding"
        android:id="@+id/editTextRegGivenName"
        android:layout_below="@+id/textViewRegGivenNameLabel"
        android:layout_centerHorizontal="true"
        android:hint="@string/passagain"
        android:inputType="textPassword"
        android:textColorHint="@color/yellow"
        android:backgroundTint="@color/yellow"
        android:textColor="@color/yellow"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textSize="@dimen/activity_text_padding"
        android:text=" "
        android:textColor="@color/alert"
        android:id="@+id/textViewRegGivenNameMessage"
        android:layout_below="@+id/editTextRegGivenName"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textSize="@dimen/activity_text_size_small"
        android:text=" "
        android:id="@+id/textViewRegEmailLabel"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/textViewRegGivenNameMessage" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_text_padding"
        android:paddingRight="@dimen/activity_text_padding"
        android:id="@+id/editTextRegEmail"
        android:layout_below="@id/textViewRegEmailLabel"
        android:layout_centerHorizontal="true"
        android:hint="@string/email_address_text"
        android:textColor="@color/yellow"
        android:textColorHint="@color/yellow"
        android:backgroundTint="@color/yellow"
        android:inputType="textEmailAddress"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textSize="@dimen/activity_text_padding"
        android:text=" "
        android:textColor="@color/alert"
        android:id="@+id/textViewRegEmailMessage"
        android:layout_below="@id/editTextRegEmail"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textSize="@dimen/activity_text_size_small"
        android:text=" "
        android:id="@+id/textViewRegPhoneLabel"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/textViewRegEmailMessage" />


    <Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity_intra_group_separation"
        android:layout_below="@id/textViewRegPhoneLabel"
        android:id="@+id/space_about_2" />

    <Button
        android:id="@+id/signUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/space_about_2"
        android:layout_alignEnd="@+id/textViewRegMessage"
        android:layout_marginTop="5dp"
        android:background="@drawable/round_corner"
        android:text="@string/finishRegister"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="20sp" />

    <ProgressBar
        android:id="@+id/prog"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignBottom="@+id/signUp"
        android:layout_centerHorizontal="true" />




</RelativeLayout>
